Fixed issue where rows got the wrong height on update. CSS fix for click targets

--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,9 @@
     top: 0;
     width: 100%;
 }
+
+.note-id-list-items > div {
+    left: 0;
+    right: 0;
+    overflow: hidden;
+}
